# dagster_pipeline

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  codespace.Dockerfile  daster_services.Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: tests.yml
config/: __init__.py  dagster.yaml  workspace.yaml
dagster_pipeline/: definitions.py
dagster_pipeline/assets/: __init__.py  extraction.py  google_drive_etl.py  loading.py  prueba.py  transformation.py
dagster_pipeline/jobs/: __init__.py
dagster_pipeline/resources/: __init__.py  database_resource.py  duckdb_connection.py  google_drive_resource.py  mongodb_resource.py  postgresql_resource.py
dagster_pipeline/schedules/: __init__.py  schedules.py
dagster_pipeline/sensors/: __init__.py  sensors.py
data/processed/: departmets_transformed.csv  (+2 more)
docker/: codespace.Dockerfile  dagster_services.Dockerfile
docs/: ASSET_CHECK_IMPLEMENTATION.md  ASSET_ORGANIZATION.md  ASSET_REORGANIZATION_SUMMARY.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_LOADING_ASSETS.md  DATABASE_LOADING_IMPLEMENTATION.md  DATABASE_QUICKSTART.md  DATABASE_SERVICES.md  DUPLICATE_FILE_HANDLING.md  FLEXIBLE_FILE_FORMAT_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_GUIDE.md  QUICK_FIX_APPLIED.md  REORGANIZATION_SUMMARY.md  SENSOR_SETUP.md  TESTING_ARCHITECTURE.md  TESTING_BEST_PRACTICES.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TEST_FIXES_NEEDED.md  TROUBLESHOOTING_ASSET_MATERIALIZATION.md  UPDATED_PIPELINE_ARCHITECTURE.md  VICTIMS_PIPELINE_SUMMARY.md
pipeline/: dagster.yaml  definitions.py  workspace.yaml
scripts/: __init__.py  quickstart.py  setup_check.py
tests/: README.md  __init__.py  conftest.py  fake_resources.py  test_asset_checks.py  test_assets.py  test_database_connections.py  test_integration.py  test_resources.py  test_schedules.py  test_sensors.py  test_upload_failure_handling.py  test_utils.py  testing_processed_data.ipynb
(+6 files in other folders)
